--- a/services.html
+++ b/services.html
@@ -338,21 +338,12 @@
                                 <h2 class="heading">Digital Minds ON Service Provider </h2>
                             </div>
                             <div class="herobanner__text">
-                                <p style="max-width: 100%;">At Digital Minds On, we create CMS
-                                    websites that do exactly what they promise. We design online stores that would fit
-                                    right in on Rodeo Drive. We develop web applications that push the limits of what's
-                                    possible. But above all, we take the greatest pride in handing over the keys to our
-                                    clients and providing the training they need to maintain their vision long after
-                                    launch.
-
-                                    One thing you should know about Digital Minds On is that we thrive on challenges. We
-                                    are driven to push boundaries and deliver results that others believe are out of
-                                    reach. Our commitment is to not just meet expectations but to exceed them. With
-                                    years of expertise and a team that always goes the extra mile, you can be sure that
-                                    working with us will be unlike any other experience.
-
-                                    We have the power, the knowledge, and the experience to deliver what you hoped your
-                                    last agency would.</p>
+                                <p style="max-width: 100%;">At Digital Minds On, we build CMS websites that deliver on
+                                    their promises, design online stores that rival Rodeo Drive, and develop web apps
+                                    that redefine what's possible. We take pride in empowering clients with the tools
+                                    and training to maintain their vision long after launch. Thriving on challenges, we
+                                    push boundaries and exceed expectations, offering unmatched expertise and a
+                                    commitment to exceptional, results-driven solutions.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
