--- a/mobile-app-development-services.html
+++ b/mobile-app-development-services.html
@@ -583,12 +583,12 @@
 
                 <!-- new-card -->
                 <div class="row g-4 horizontal-card">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -602,12 +602,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Database Management.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -622,12 +622,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -641,12 +641,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/Software Development/Testing.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -660,12 +660,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/Software Development/Deployment.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -680,12 +680,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/Software Development/Maintenance & Updates.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -1062,6 +1062,10 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
+    <!-- animation on scroll -->
+    <script>
+        AOS.init();
+    </script>
     <!-- back to top -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
