--- a/digital-marketing-services.html
+++ b/digital-marketing-services.html
@@ -568,12 +568,12 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card" style="padding-top: 40px !important;">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/digital/seo.jpeg" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -587,12 +587,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/digital/pay.jpeg" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -605,12 +605,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/digital/social.jpeg" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -624,12 +624,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/digital/content.jpeg" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -644,14 +644,12 @@
                             </div>
                         </div>
                     </div>
-
-
-                    <div class="col-md-8 large-card">
+                    <div class="col-md-8 large-card" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/digital/mail.jpeg" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -954,7 +952,10 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
-
+        <!-- animation on scroll -->
+        <script>
+            AOS.init();
+        </script>
     <!-- back to top -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
