--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -567,12 +567,12 @@
                     </div>
                 </div>
                 <div class="row g-4 horizontal-card" style="padding-top: 40px !important;">
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/Interaction Design.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -585,12 +585,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/Prototyping.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -602,12 +602,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/Usability Testing.png"
-                                        class="img-fluid rounded-start" alt="...">
+                                        class="img-fluid rounded-start" alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -620,12 +620,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/User Research.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -639,12 +639,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-right" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/Visual Design.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -658,12 +658,12 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6" data-aos="fade-left" data-aos-duration="1000">
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
                                     <img src="assets/img/service/UIUX/Wireframing.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                        alt="img">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -1035,6 +1035,10 @@
     <script src="assets/js/plugins.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/main.js"></script>
+      <!-- animation on scroll -->
+      <script>
+        AOS.init();
+    </script>
     <!-- back to top -->
     <script>
         document.addEventListener("DOMContentLoaded", () => {
